--- a/public/style.css
+++ b/public/style.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 body{
-    background: rgb(236, 236, 171);
+    background: rgb(236, 236, 171) !important;
     padding: 0 16px;
 }
 Header{
-    background:rgb(236, 199, 76);
+    background:rgb(236, 199, 76) !important;
     margin:auto -16px;
     padding:16px  32px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -39,6 +39,7 @@ footer p{
     width: 240px;
     margin: 16px;
     float: left;
+    word-wrap: break-word;
 }
 .note h1{
     margin-bottom: 7px;
@@ -85,7 +86,7 @@ form input,textarea{
     border:none;
     width:100%;
     font-size:16px;
-    resize: none;
+    resize:none;
     padding: 9px;
 }
 
